--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="lenses_today">Линзы сегодня</string>
     <string name="press_button_to_add_new_lenses">Линзы ещё не добавлены.\nНажмите \"+\" чтобы добавить новые линзы</string>
     <string name="empty_input_error">Поле не должно быть пустым!</string>
+    <string name="new_lenses">Новые линзы</string>
 </resources>
